100vh of body to 100dvh to fix the screen on mobile

--- a/css/geral.css
+++ b/css/geral.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Labrada", serif;
-  height: 100vh;
+  height: 100dvh;
 }
 
 .content-container {
